crates/bonsaidb-macros/tests/ui/view/invalid_attribute.stderr
error: Supported fields are `collection`, `key`, `name` and `value`
 --> tests/ui/view/invalid_attribute.rs:4:21
  |
4 | #[view(name = "hi", authority = "hello", "hi")]
  |                     ^^^^^^^^^
